<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin_small"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="18sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/title"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/divider"
        android:layout_alignParentRight="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/show_in_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/show_in_map"
            android:visibility="invisible"
            android:textColor="#0000ff" />
    </LinearLayout>

    <TextView
        android:id="@+id/first_location_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/divider"
        android:text="@string/ph_first_location_time" />

    <TextView
        android:id="@+id/location_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/first_location_time"
        android:text="@string/ph_location_time" />

    <TextView
        android:id="@+id/location_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/location_time"
        android:text="@string/ph_location_count" />

    <TextView
        android:id="@+id/location_traffic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/location_count"
        android:text="@string/ph_location_traffic" />
    <TextView
        android:id="@+id/location_addr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/location_traffic"
        android:text="@string/ph_location_addr" />

    <LinearLayout
        android:id="@+id/location_records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_addr"
        android:background="@drawable/list_selector_background"
        android:clickable="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/record1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/record2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/record3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>